# workflow-engine

./: .env.example  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docker/: Dockerfile  Dockerfile.worker  docker-compose.yml
src/workflow_engine/: __init__.py  config.py  main.py
src/workflow_engine/admin/: __init__.py  app.py  auth.py
src/workflow_engine/admin/static/css/: style.css
src/workflow_engine/admin/static/js/: app.js
src/workflow_engine/admin/templates/: base.html  dashboard.html  login.html
src/workflow_engine/admin/templates/jobs/: trigger.html
src/workflow_engine/api/: app.py  dependencies.py
src/workflow_engine/api/auth/: jwt.py  routes.py  schemas.py
src/workflow_engine/api/v1/: router.py
src/workflow_engine/db/: __init__.py  session.py
src/workflow_engine/db/models/: __init__.py  client.py  enums.py  request.py  request_email_log.py  request_state_history.py
src/workflow_engine/db/repositories/: __init__.py  base.py  client.py  request.py
src/workflow_engine/email/: __init__.py  base.py  receiver.py  sender.py  ses.py
src/workflow_engine/worker/: __init__.py  celery_app.py  scheduler.py
src/workflow_engine/worker/tasks/: check_deadlines.py  process_inbound_emails.py
src/workflow_engine/workflows/: __init__.py  registry.py
src/workflow_engine/workflows/base/: __init__.py  event.py  state.py  state_machine.py  transition.py
src/workflow_engine/workflows/classifiers/: __init__.py  base.py  keyword.py  llm.py
src/workflow_engine/workflows/types/: __init__.py
tests/: __init__.py  conftest.py
tests/unit/: test_classifiers.py  test_email.py  test_registry.py  test_state_machine.py
(+8 files in other folders)
