[project]
name = "workflow-engine"
version = "0.1.0"
description = "Email Workflow Engine with state machine processing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Background Tasks
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",

    # AWS
    "boto3>=1.35.0",
    "aioboto3>=13.0.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "itsdangerous>=2.2.0",

    # Configuration
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Templating (Admin UI)
    "jinja2>=3.1.4",

    # Utilities
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "faker>=33.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_engine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/workflow_engine --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
